--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  color: $text-color;
   align-items: center;
 
   &__my-self {
@@ -23,6 +24,7 @@
       margin-top: 5vh;
       padding-bottom: 1vh;
       text-align: center;
+      font-size: 2.5rem;
     }
 
     .username {
@@ -46,8 +48,25 @@
     .box {
       border-radius: 5px;
       background-color: $button-color;
-      width: 8rem;
-      height: 5rem;
+      width: 12rem;
+      height: 6rem;
+
+      div {
+        opacity: 0.8;
+        margin: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      h5 {
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+      }
+
+      span {
+        font-size: 1.4rem;
+      }
     }
   }
 }
