--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,3 +1,8 @@
 $text-color: #ffffff;
 $background-color: #1a1e22;
 $button-color: #24292e;
+
+@mixin transition {
+  transition: 0.4s;
+  transition-timing-function: ease-in-out;
+}
