--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "resets";
 @import "header";
+@import "form";
+@import "content";
 
 .App {
   width: 100%;
   height: 100vh;
+}
+
+.return {
+  position: absolute;
+  left: 1rem;
+  top: 1.3rem;
+  color: $text-color;
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  @include transition;
+
+  &:hover {
+    color: rgb(121, 184, 255);
+  }
 }
